# auth0-examples

./: README.md
django-auth0/: .gitignore  db.sqlite3  manage.py  pyproject.toml
django-auth0/auth0django/: asgi.py  settings.py  urls.py  wsgi.py
django-auth0/webappexample/auth0login/: auth0backend.py  views.py
django-auth0/webappexample/auth0login/templates/: index.html
django-auth0/webappexample/webappexample/: asgi.py  settings.py  urls.py  wsgi.py
django-mozilla-oidc/: README.md  pyproject.toml
django-mozilla-oidc/src/: Makefile
django-mozilla-oidc/src/store/: settings.py  urls.py  utils.py
django-mozilla-oidc/src/webapp/: views.py
django-mozilla-oidc/src/webapp/templates/webapp/: base.html  index.html  profile.html
flask-auth0/: Makefile  pyproject.toml
flask-auth0/auth0_flask/: server.py
flask-auth0/tests/: test_auth0_flask.py
node-apps/: README.md
node-apps/node-oidc-webapp/src/: server.js
node-apps/node-passport-oidc-webapp/: package-lock.json
node-apps/node-passport-oidc-webapp/src/: server.js
node-apps/oidc-oauth2-api/: package-lock.json
node-oidc-webapp/: package-lock.json
node-oidc-webapp/src/: server.js
rails-api/: .gitignore  Gemfile  Makefile
rails-api/app/controllers/: chirps_controller.rb
rails-api/config/: credentials.yml.enc
rails-api/config/credentials/: development.yml.enc
rails-api/config/initializers/: cors.rb
rails-api/db/: schema.rb
rails-login-app/: .gitignore
rails-login-app/app/controllers/: dashboard_controller.rb
rails-login-app/app/views/dashboard/: show.html.erb
react-login-and-api/: Makefile  README.md  package-lock.json  package.json
react-login-and-api/src/: index.js
react-login-and-api/src/views/: ExternalApi.js
