[tool.poetry]
name = "django-auth0"
version = "0.1.0"
description = ""
authors = ["Attila Domokos <adomokos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1"
social-auth-app-django = "^4.0.0"
python-jose = "^3.2.0"
python-dotenv = "^0.14.0"
django-extensions = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
