[tool.poetry]
name = "django-mozilla-oidc"
version = "0.1.0"
description = ""
authors = ["Attila Domokos <adomokos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.1"
django-extensions = "^3.0.6"
mozilla-django-oidc = "^1.2.4"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
